# metalayer

./: .gitignore  CLAUDE.md  README.md  config.yaml  package.json  pyproject.toml  setup.sh
.claude-plugin/: plugin.json
context/lore/: sql_style.md  vault_overview.md
context/sources/: oneeleven_production.md
scripts/: plugin-setup.sh
skills/ask-data/: SKILL.md
skills/context-audit/: SKILL.md
skills/learn/: SKILL.md
skills/propose-checklist/: SKILL.md
skills/reflection/: SKILL.md
skills/setup/: SKILL.md
skills/sql-consensus/: SKILL.md
skills/update-from/: SKILL.md
skills/writing-context/: SKILL.md
src/metalayer/: answer_card.py  cli.py  config.py  frontmatter.py  paths.py  qmd.py  query_memory.py  resolver.py  resources.py  validation.py
src/metalayer/assets/imports/: csv.md  dbt_mcp.md  lookml.md  query_history.md  snowflake_mcp.md
src/metalayer/tests/: conftest.py  test_frontmatter.py  test_query_memory.py  test_resolver.py  test_validation.py
src/metalayer/tests/test_tools/: test_audit.py  test_context.py  test_sql.py  test_sync.py  test_topic.py
src/metalayer/tools/: audit.py  context.py  sql.py  sync.py  topic.py
utils/imports/: custom.md  warehouse_history.md
utils/scripts/: .env  connect-rds.sh  get-db-credentials.sh  run-query.sh  setup.sh  shutdown.sh  startup.sh
